update lazy load

--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -5,7 +5,7 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card konten">
         <div class="card-body">
-          <h5 class="card-title">Daftar User Sign On</h5>
+          <h5 class="text-primary font-weight-bold">DAFTAR USER SIGN ON</h5>
           <!--panel 1-->
           <div class="card">
             <div class="card-body">
@@ -21,21 +21,21 @@
               </div>
 
               <div class="form-group row">
-                  <label class="col-2 col-form-label font-weight-bold">Nama</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <label class="col-2 col-form-label">Jateng SP</label>
-                  <span class="col-1"></span>
-                  <label class="col-2 col-form-label font-weight-bold">Kode Cabang</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <label class="col-2 col-form-label">034 - Cabang Utama</label>
-                </div>
- 
-                <div class="form-group row">
-                    <span class="col-5"></span>
-                    <label class="col-2 col-form-label font-weight-bold">Kode Departemen</label>
-                    <label class="col-form-label pr-0  font-weight-bold">:</label>
-                    <label class="col-2 col-form-label">DC - Data Center</label>
-                  </div>
+                <label class="col-2 col-form-label font-weight-bold">Nama</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">Jateng SP</label>
+                <span class="col-1"></span>
+                <label class="col-2 col-form-label font-weight-bold">Kode Cabang</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">034 - Cabang Utama</label>
+              </div>
+
+              <div class="form-group row">
+                <span class="col-5"></span>
+                <label class="col-2 col-form-label font-weight-bold">Kode Departemen</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <label class="col-2 col-form-label">DC - Data Center</label>
+              </div>
 
             </div>
           </div>
