--- a/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
+++ b/src/app/teller-in/teller-in-tran-pindah-buku/teller-in-tran-pindah-buku.component.html
@@ -4,7 +4,7 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5 class="text-primary font-weight-bold">TRANSAKSI PEMINDAHBUKUAN TANPA CEK</h5>
+        <h5 class="text-primary font-weight-bold">Transaksi Pemindahbukuan Tanpa Cek</h5>
 
         <mdb-card>
           <mdb-card-body>
@@ -15,7 +15,7 @@
                 <label class="col-form-label pr-0 font-weight-bold">:</label>
                 <div class="col-3 form-inline">
                   <div class="input-group">
-                    <input mdbInput mdbValidate class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta"
+                    <input mdbValidate matInput [min]="minDate" [max]="maxDate"  class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta"
                       formControlName="tanggal">
                     <mat-datepicker #picker></mat-datepicker>
                     <div class="input-group-append">
@@ -33,7 +33,7 @@
               <div class="form-group row">
                 <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input type="text" class="form-control"></div>
+                <div class="col-3"><input type="number" class="form-control"></div>
                 <span class="col-6"></span>
               </div>
               <!--input 2-->
@@ -61,8 +61,7 @@
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <!-- <div class="col-3"><input type="text" class="form-control" currencyMask [(ngModel)]="value" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}"></div> -->
                 <div class="col-3">
-                  <input mdbInput mdbValidate currencyFormat data-symbol="Rp." type="text" min="10000" class="form-control"
-                    minlength="10" formControlName="nilaiTransaksi">
+                    <input mdbValidate currencyMask id="nilaiTransaksi" class="form-control" formControlName="nilaiTransaksi" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}" required>
                 </div>
                 <p class="col-6 text-danger" *ngIf="inputNilai.invalid && (inputNilai.dirty || inputNilai.touched)">Mohon
                   Masukan Nilai Transaksi(*minimum Rp.10Rb)</p>
@@ -106,7 +105,7 @@
 
 <div mdbModal #modalSwipe="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
   aria-labelledby="myModalLabel" aria-hidden="true" [config]="{ignoreBackdropClick: true}">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold">Transaksi Setoran Tunai</h4>
@@ -135,7 +134,7 @@
 
 <div mdbModal #modalFoto="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel"
   aria-hidden="true" [config]="{ignoreBackdropClick: true}">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h4 class="modal-title w-100" id="myModalLabel">Validasi Foto Dan Tanda Tangan</h4>
@@ -158,16 +157,48 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" mdbBtn color="primary" class="waves-light" aria-label="Close" (click)="validasiSucces()"
-          mdbWavesEffect><i class="fa fa-refresh"></i> Proses</button>
+
+          <button type="button" mdbBtn color="primary" class="waves-light" aria-label="Close" (click)="validasiSucces()"
+          mdbWavesEffect *ngIf="!isSPV"><i class="fa fa-refresh"></i> Proses</button>
+        <button type="button" mdbBtn color="primary" class="waves-light" aria-label="Close" (click)="validasiSPV()"
+          mdbWavesEffect *ngIf="isSPV"><i class="fa fa-refresh"></i> Proses</button>
+
+<!--    <button type="button" mdbBtn color="primary" class="waves-light" aria-label="Close" (click)="validasiSucces()"
+          mdbWavesEffect><i class="fa fa-refresh"></i> Proses</button> -->
       </div>
     </div>
   </div>
 </div>
 
+
+<!--bagian modal untuk validasi transaksi-->
+<div mdbModal #modalSPV="mdbModal" class="modal fade modal-notify modal-primary" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered modal-sm modal-notify modal-primary" role="document">
+      <!--Content-->
+      <div class="modal-content text-center">
+        <!--Header-->
+        <div class="modal-header d-flex justify-content-center">
+          <p class="heading">Supervisor Approval</p>
+        </div>
+        <!--Body-->
+        <div class="modal-body">
+          Inputkan FingerPrint Dari Supervisor
+          <img src="../../../assets/image/finger.gif" class="rounded mx-auto d-block" alt="..." style="height: 120px;">
+        </div>
+        <!--Footer-->
+        <div class="modal-footer justify-content-center">
+          <a type="button" mdbBtn color="primary" class="waves-effect" mdbWavesEffect data-dismiss="modal" (click)="validasiSucces()"><i
+              class="fa fa-refresh"></i> Proses</a>
+        </div>
+      </div>
+      <!--/.Content-->
+    </div>
+  </div>
+  <!--Bagian modal untuk validasi transaksi-->
+
 <!--bagian modal untuk validasi transaksi-->
 <div mdbModal #modalSucces="mdbModal" class="modal fade modal-notify modal-success" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-sm modal-notify modal-success" role="document">
+  <div class="modal-dialog modal-dialog-centered modal-sm modal-notify modal-success" role="document">
     <!--Content-->
     <div class="modal-content text-center">
       <!--Header-->
@@ -189,4 +220,3 @@
 </div>
 <!--Bagian modal untuk validasi transaksi-->
 
-<!--Bagian modal untuk validasi transaksi-->
