--- a/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
+++ b/src/app/teller-in/teller-in-selisih-kas/teller-in-selisih-kas.component.html
@@ -22,7 +22,7 @@
               <div class="form-group row">
                 <label class="col-2 col-form-label  font-weight-bold">Nomor Referensi</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input type="text" class="form-control" id="inputNoReferensi"></div>
+                <div class="col-3"><input type="number" class="form-control" id="inputNoReferensi"></div>
                 <span class="col-6"></span>
               </div>
               <!--input 2-->
@@ -31,7 +31,8 @@
                 <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <div class="col-3">
-                  <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang" id="MataUang">
+                  <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang" id="MataUang"
+                    style="width: 250px;">
                     <option selected disabled>Pilih Salah Satu</option>
                     <option value="idr">IDR</option>
                     <option value="usd">USD</option>
@@ -46,8 +47,18 @@
               <div class="form-group row">
                 <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
-                <div class="col-3"><input mdbInput mdbValidate currencyFormat data-symbol="Rp." type="text" min="10000"
-                    class="form-control" id="nilaiTransaksi" minlength="9" formControlName="nilaiTransaksi"></div>
+                <div class="col-3">
+                  <ng-container [ngSwitch]="currency">
+                    <input id="nilaiTransaksi" *ngSwitchCase="'idr'" currencyMask class="form-control" formControlName="nilaiTransaksi"
+                      [options]="{ prefix: 'Rp ', thousands: '.', decimal: ',',precision : '0' }">
+                    <input id="nilaiTransaksi" *ngSwitchCase="'usd'" currencyMask class="form-control" formControlName="nilaiTransaksi"
+                      [options]="{ prefix: '$ ', thousands: '.', decimal: ',',precision : '0' }">
+                    <input id="nilaiTransaksi" *ngSwitchCase="'yen'" currencyMask class="form-control" formControlName="nilaiTransaksi"
+                      [options]="{ prefix: '¥ ', thousands: '.', decimal: ',',precision : '0' }">
+                    <input id="nilaiTransaksi" *ngSwitchDefault formControlName="nilaiTransaksi" class="form-control"
+                      readonly>
+                  </ng-container>
+                </div>
                 <p class="col-6 text-danger" *ngIf="nilaiTransaksi.invalid && (nilaiTransaksi.dirty || nilaiTransaksi.touched)">Mohon
                   Masukan Nilai Transaksi(*minimum Rp.10Rb)</p>
               </div>
@@ -88,4 +99,42 @@
     </div>
   </div>
 
+</div>
+
+
+
+<!-- modal template -->
+<div mdbModal #modalKonfirmasi="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Notifikasi Transaksi</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modalKonfirmasi.hide()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="mb-2">
+          <p>Tanggal Transaksi : {{Tanggal}} </p>
+        </div>
+        <div class="mb-2">
+          <p>No Referensi : {{noReferensi}} </p>
+        </div>
+        <div class="mb-2">
+          <p>Mata Uang : {{mataUang}}</p>
+        </div>
+        <div class="mb-2">
+          <p>Nilai Transaksi Transaksi :{{jumlahTransaksi}} </p>
+        </div>
+        <div class="mb-2">
+          <p>Keterangan : {{keterangan}}</p>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button mdbBtn color="default" class="waves-light" mdbWavesEffect (click)="modalKonfirmasi.hide()">OK</button>
+      </div>
+    </div>
+  </div>
 </div>
