--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -10,7 +10,7 @@
           <div class="card">
             <div class="card-body">
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">User Id</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -20,7 +20,7 @@
                 <label class="col-2 col-form-label">Jateng SP</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">Nama</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -30,7 +30,7 @@
                 <label class="col-2 col-form-label">034 - Cabang Utama</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <span class="col-5"></span>
                 <label class="col-2 col-form-label font-weight-bold">Kode Departemen</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
@@ -42,57 +42,52 @@
           <!--panel 1-->
           <h5 class="card-title" style="margin-top: 10px;">Daftar User</h5>
           <!--panel 2-->
-          <div class="card">
-            <div class="card-body">
-              <table class="table table-hover">
-                <thead class="grey lighten-2">
-                  <tr class="font-weight-bold">
-                    <th scope="col">User ID</th>
-                    <th scope="col">Nama</th>
-                    <th scope="col">Login</th>
-                    <th scope="col">Invalidate</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">{{tanggal | date:'short'}}</td>
-                    <td class="font-weight-normal"><a>Invalidate</a></td>
-                  </tr>
-                  <tr>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">{{tanggal | date:'short'}}</td>
-                    <td class="font-weight-normal"><a>Invalidate</a></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <!--panel 2-->
 
-          <!--Pagination-->
-          <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-            <nav aria-label="Page navigation example">
-              <ul class="pagination pg-blue">
-                <li class="page-item">
-                  <a class="page-link" aria-label="Previous">
-                    <span aria-hidden="true">&laquo; Sebelumnya</span>
-                  </a>
-                </li>
-                <li class="page-item"><a class="page-link">1</a></li>
-                <li class="page-item"><a class="page-link">2</a></li>
-                <li class="page-item"><a class="page-link">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" aria-label="Next">
-                    <span aria-hidden="true">&raquo; Selanjutnya</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--Pagination-->
+          <!-- table daftar user  -->
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-hover">
+
+            <ng-container matColumnDef="user_id">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark"> USER ID </p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.user_id}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nama">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark">Nama</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.nama}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="login">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark">Login</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.login}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="invalidate">
+              <th mat-header-cell *matHeaderCellDef class="font-weight-bold">
+                <p class="font-weight-bold h6 text-dark">Invalidate</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.invalidate}}</p>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+          <!-- table daftar user   -->
 
           <br>
         </div>
