--- a/src/app/administrative/web-branch-status/web-branch-status.component.html
+++ b/src/app/administrative/web-branch-status/web-branch-status.component.html
@@ -9,7 +9,7 @@
           <div class="card">
             <div class="card-body">
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">User Id</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -19,7 +19,7 @@
                 <label class="col-2 col-form-label">Jateng SP</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">Nama</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -29,7 +29,7 @@
                 <label class="col-2 col-form-label">034 - Cabang Utama</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <span class="col-5"></span>
                 <label class="col-2 col-form-label font-weight-bold">Kode Departemen</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
@@ -44,7 +44,7 @@
           <div class="card" style="margin-top: 20px;">
             <div class="card-body">
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <span class="col-3"></span>
                 <label class="col-2 col-form-label font-weight-bold">Kode Cabang</label>
                 <span class="col-2"></span>
@@ -52,7 +52,7 @@
                 <span class="col-3"></span>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <span class="col-3"></span>
                 <label class="col-2 col-form-label">034 - Cabang Utama</label>
                 <span class="col-2"></span>
@@ -67,35 +67,33 @@
           <div class="card" style="margin-top: 20px;">
             <div class="card-body">
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-3 col-form-label font-weight-bold">Start Of Day Terakhir</label>
                 <label class="col-0 col-form-label"> : </label>
                 <label class="col-3 col-form-label">28/01/2018 07:14:11</label>
                 <span class="col-3"></span>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-3 col-form-label font-weight-bold">Tanggal Bisnis Sebelumnya</label>
                 <label class="col-0 col-form-label"> : </label>
                 <label class="col-3 col-form-label">28/01/1028</label>
                 <span class="col-3"></span>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-3 col-form-label font-weight-bold">Tanggal Bisnis Sekarang</label>
                 <label class="col-0 col-form-label"> : </label>
                 <label class="col-3 col-form-label">29/01/1028</label>
                 <span class="col-3"></span>
               </div>
 
-              <div class="form-group row">
-                  <label class="col-3 col-form-label font-weight-bold">Tanggal Bisnis Berikutnya</label>
-                  <label class="col-0 col-form-label"> : </label>
-                  <label class="col-3 col-form-label">30/01/1028</label>
-                  <span class="col-3"></span>
-                </div>
-
-
+              <div class="form-group row mb-0">
+                <label class="col-3 col-form-label font-weight-bold">Tanggal Bisnis Berikutnya</label>
+                <label class="col-0 col-form-label"> : </label>
+                <label class="col-3 col-form-label">30/01/1028</label>
+                <span class="col-3"></span>
+              </div>
 
             </div>
           </div>
